Update new total supply transformer handling
Signed-off-by: Edwin Greene <edwin@swirldslabs.com>